1. Hotfix: Enhanced error parsing for accurate API error display.