@@ -1,1 +1,2 @@
-1. Hotfix: Enhanced error parsing for accurate API error display.
+1. Enhanced the warning notification when a trade is not funded.
+2. Rectified error messages.
